--- a/src/components/accordian/styles.css
+++ b/src/components/accordian/styles.css
@@ -1,23 +1,24 @@
-.acc-wrapper {
+.wrapper{
   display: flex;
   height: 100vh;
-  width: 100vw;
+  width: 50vw;
   justify-content: center;
   align-items: center;
+  margin-left: 350px;
   flex-direction: column;
   gap: 20px;
 }
 
-.acc-wrapper button {
-    padding: 10px 20px;
-    background: #614101;
-    color: #fff;
-    font-weight: bold;
-    font-size: 20px;
-    cursor: pointer;
+.wrapper button{
+  padding: 10px 20px;
+  background: #614101;
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+  cursor: pointer;
 }
 
-.accordian {
+.accordion{
   width: 500px;
 }
 
@@ -27,15 +28,15 @@
   padding: 10px 20px;
 }
 
-.title {
+.title{
   color: #ffffff;
-  display: flex;
-  justify-content: space-between;
+  display:flex;
+  justify-content:space-between;
   align-items: center;
   cursor: pointer;
 }
 
-.acc-content {
+.content{
   color: #ffffff;
   height: auto;
 }
